python/versioned_docs/version-1.11.0/api/class-browser.mdx
---
id: class-browser
title: "Browser"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

* extends: [EventEmitter]

A Browser is created via [browser_type.launch(**kwargs)](./api/class-browsertype.mdx#browser_typelaunchkwargs). An example of using a [Browser] to create a [Page]:

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import sync_playwright

def run(playwright):
    firefox = playwright.firefox
    browser = firefox.launch()
    page = browser.new_page()
    page.goto("https://example.com")
    browser.close()

with sync_playwright() as playwright:
    run(playwright)
```

</TabItem>
<TabItem value="async">

```py
import asyncio
from playwright.async_api import async_playwright

async def run(playwright):
    firefox = playwright.firefox
    browser = await firefox.launch()
    page = await browser.new_page()
    await page.goto("https://example.com")
    await browser.close()

async def main():
    async with async_playwright() as playwright:
        await run(playwright)
asyncio.run(main())
```

</TabItem>
</Tabs>


- [browser.on("disconnected")](./api/class-browser.mdx#browserondisconnected)
- [browser.close()](./api/class-browser.mdx#browserclose)
- [browser.contexts](./api/class-browser.mdx#browsercontexts)
- [browser.is_connected()](./api/class-browser.mdx#browseris_connected)
- [browser.new_browser_cdp_session()](./api/class-browser.mdx#browsernew_browser_cdp_session)
- [browser.new_context(**kwargs)](./api/class-browser.mdx#browsernew_contextkwargs)
- [browser.new_page(**kwargs)](./api/class-browser.mdx#browsernew_pagekwargs)
- [browser.start_tracing(**kwargs)](./api/class-browser.mdx#browserstart_tracingkwargs)
- [browser.stop_tracing()](./api/class-browser.mdx#browserstop_tracing)
- [browser.version](./api/class-browser.mdx#browserversion)

## browser.on("disconnected")
- type: <[Browser]>

Emitted when Browser gets disconnected from the browser application. This might happen because of one of the following:
* Browser application is closed or crashed.
* The [browser.close()](./api/class-browser.mdx#browserclose) method was called.

## browser.close()
- returns: <[NoneType]>

In case this browser is obtained using [browser_type.launch(**kwargs)](./api/class-browsertype.mdx#browser_typelaunchkwargs), closes the browser and all of its pages (if any were opened).

In case this browser is connected to, clears all created contexts belonging to this browser and disconnects from the browser server.

The [Browser] object itself is considered to be disposed and cannot be used anymore.

## browser.contexts
- returns: <[List]\[[BrowserContext]\]>

Returns an array of all open browser contexts. In a newly created browser, this will return zero browser contexts.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
browser = pw.webkit.launch()
print(len(browser.contexts())) # prints `0`
context = browser.new_context()
print(len(browser.contexts())) # prints `1`
```

</TabItem>
<TabItem value="async">

```py
browser = await pw.webkit.launch()
print(len(browser.contexts())) # prints `0`
context = await browser.new_context()
print(len(browser.contexts())) # prints `1`
```

</TabItem>
</Tabs>

## browser.is_connected()
- returns: <[bool]>

Indicates that the browser is connected.

## browser.new_browser_cdp_session()
- returns: <[CDPSession]>

:::note
CDP Sessions are only supported on Chromium-based browsers.
:::

Returns the newly created browser session.

## browser.new_context(**kwargs)
- `accept_downloads` <[bool]> Whether to automatically download all the attachments. Defaults to `false` where all the downloads are canceled.
- `bypass_csp` <[bool]> Toggles bypassing page's Content-Security-Policy.
- `color_scheme` <"light"|"dark"|"no-preference"> Emulates `'prefers-colors-scheme'` media feature, supported values are `'light'`, `'dark'`, `'no-preference'`. See [page.emulate_media(**kwargs)](./api/class-page.mdx#pageemulate_mediakwargs) for more details. Defaults to `'light'`.
- `device_scale_factor` <[float]> Specify device scale factor (can be thought of as dpr). Defaults to `1`.
- `extra_http_headers` <[Dict]\[[str], [str]\]> An object containing additional HTTP headers to be sent with every request. All header values must be strings.
- `geolocation` <[Dict]>
  - `latitude` <[float]> Latitude between -90 and 90.
  - `longitude` <[float]> Longitude between -180 and 180.
  - `accuracy` <[float]> Non-negative accuracy value. Defaults to `0`.
- `has_touch` <[bool]> Specifies if viewport supports touch events. Defaults to false.
- `http_credentials` <[Dict]> Credentials for [HTTP authentication](https://developer.mozilla.org/en-US/docs/Web/HTTP/Authentication).
  - `username` <[str]>
  - `password` <[str]>
- `ignore_https_errors` <[bool]> Whether to ignore HTTPS errors during navigation. Defaults to `false`.
- `is_mobile` <[bool]> Whether the `meta viewport` tag is taken into account and touch events are enabled. Defaults to `false`. Not supported in Firefox.
- `java_script_enabled` <[bool]> Whether or not to enable JavaScript in the context. Defaults to `true`.
- `locale` <[str]> Specify user locale, for example `en-GB`, `de-DE`, etc. Locale will affect `navigator.language` value, `Accept-Language` request header value as well as number and date formatting rules.
- `no_viewport` <[bool]> Does not enforce fixed viewport, allows resizing window in the headed mode.
- `offline` <[bool]> Whether to emulate network being offline. Defaults to `false`.
- `permissions` <[List]\[[str]\]> A list of permissions to grant to all pages in this context. See [browser_context.grant_permissions(permissions, **kwargs)](./api/class-browsercontext.mdx#browser_contextgrant_permissionspermissions-kwargs) for more details.
- `proxy` <[Dict]> Network proxy settings to use with this context.
  - `server` <[str]> Proxy to be used for all requests. HTTP and SOCKS proxies are supported, for example `http://myproxy.com:3128` or `socks5://myproxy.com:3128`. Short form `myproxy.com:3128` is considered an HTTP proxy.
  - `bypass` <[str]> Optional coma-separated domains to bypass proxy, for example `".com, chromium.org, .domain.com"`.
  - `username` <[str]> Optional username to use if HTTP proxy requires authentication.
  - `password` <[str]> Optional password to use if HTTP proxy requires authentication.
- `record_har_omit_content` <[bool]> Optional setting to control whether to omit request content from the HAR. Defaults to `false`.
- `record_har_path` <[Union]\[[str], [pathlib.Path]\]> Enables [HAR](http://www.softwareishard.com/blog/har-12-spec) recording for all pages into the specified HAR file on the filesystem. If not specified, the HAR is not recorded. Make sure to call [browser_context.close()](./api/class-browsercontext.mdx#browser_contextclose) for the HAR to be saved.
- `record_video_dir` <[Union]\[[str], [pathlib.Path]\]> Enables video recording for all pages into the specified directory. If not specified videos are not recorded. Make sure to call [browser_context.close()](./api/class-browsercontext.mdx#browser_contextclose) for videos to be saved.
- `record_video_size` <[Dict]> Dimensions of the recorded videos. If not specified the size will be equal to `viewport` scaled down to fit into 800x800. If `viewport` is not configured explicitly the video size defaults to 800x450. Actual picture of each page will be scaled down if necessary to fit the specified size.
  - `width` <[int]> Video frame width.
  - `height` <[int]> Video frame height.
- `screen` <[Dict]> Emulates consistent window screen size available inside web page via `window.screen`. Is only used when the `viewport` is set.
  - `width` <[int]> page width in pixels.
  - `height` <[int]> page height in pixels.
- `storage_state` <[Union]\[[str], [pathlib.Path]\]|[Dict]> Populates context with given storage state. This option can be used to initialize context with logged-in information obtained via [browser_context.storage_state(**kwargs)](./api/class-browsercontext.mdx#browser_contextstorage_statekwargs). Either a path to the file with saved storage, or an object with the following fields:
  - `cookies` <[List]\[[Dict]\]> Optional cookies to set for context
    - `name` <[str]>
    - `value` <[str]>
    - `url` <[str]> Optional either url or domain / path are required
    - `domain` <[str]> Optional either url or domain / path are required
    - `path` <[str]> Optional either url or domain / path are required
    - `expires` <[float]> Optional Unix time in seconds.
    - `httpOnly` <[bool]> Optional httpOnly flag
    - `secure` <[bool]> Optional secure flag
    - `sameSite` <"Strict"|"Lax"|"None"> Optional sameSite flag
  - `origins` <[List]\[[Dict]\]> Optional localStorage to set for context
    - `origin` <[str]>
    - `localStorage` <[List]\[[Dict]\]>
      - `name` <[str]>
      - `value` <[str]>
- `timezone_id` <[str]> Changes the timezone of the context. See [ICU's metaZones.txt](https://cs.chromium.org/chromium/src/third_party/icu/source/data/misc/metaZones.txt?rcl=faee8bc70570192d82d2978a71e2a615788597d1) for a list of supported timezone IDs.
- `user_agent` <[str]> Specific user agent to use in this context.
- `viewport` <[NoneType]|[Dict]> Sets a consistent viewport for each page. Defaults to an 1280x720 viewport. `no_viewport` disables the fixed viewport.
  - `width` <[int]> page width in pixels.
  - `height` <[int]> page height in pixels.
- returns: <[BrowserContext]>

Creates a new browser context. It won't share cookies/cache with other browser contexts.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
browser = playwright.firefox.launch() # or "chromium" or "webkit".
# create a new incognito browser context.
context = browser.new_context()
# create a new page in a pristine context.
page = context.new_page()
page.goto("https://example.com")
```

</TabItem>
<TabItem value="async">

```py
browser = await playwright.firefox.launch() # or "chromium" or "webkit".
# create a new incognito browser context.
context = await browser.new_context()
# create a new page in a pristine context.
page = await context.new_page()
await page.goto("https://example.com")
```

</TabItem>
</Tabs>

## browser.new_page(**kwargs)
- `accept_downloads` <[bool]> Whether to automatically download all the attachments. Defaults to `false` where all the downloads are canceled.
- `bypass_csp` <[bool]> Toggles bypassing page's Content-Security-Policy.
- `color_scheme` <"light"|"dark"|"no-preference"> Emulates `'prefers-colors-scheme'` media feature, supported values are `'light'`, `'dark'`, `'no-preference'`. See [page.emulate_media(**kwargs)](./api/class-page.mdx#pageemulate_mediakwargs) for more details. Defaults to `'light'`.
- `device_scale_factor` <[float]> Specify device scale factor (can be thought of as dpr). Defaults to `1`.
- `extra_http_headers` <[Dict]\[[str], [str]\]> An object containing additional HTTP headers to be sent with every request. All header values must be strings.
- `geolocation` <[Dict]>
  - `latitude` <[float]> Latitude between -90 and 90.
  - `longitude` <[float]> Longitude between -180 and 180.
  - `accuracy` <[float]> Non-negative accuracy value. Defaults to `0`.
- `has_touch` <[bool]> Specifies if viewport supports touch events. Defaults to false.
- `http_credentials` <[Dict]> Credentials for [HTTP authentication](https://developer.mozilla.org/en-US/docs/Web/HTTP/Authentication).
  - `username` <[str]>
  - `password` <[str]>
- `ignore_https_errors` <[bool]> Whether to ignore HTTPS errors during navigation. Defaults to `false`.
- `is_mobile` <[bool]> Whether the `meta viewport` tag is taken into account and touch events are enabled. Defaults to `false`. Not supported in Firefox.
- `java_script_enabled` <[bool]> Whether or not to enable JavaScript in the context. Defaults to `true`.
- `locale` <[str]> Specify user locale, for example `en-GB`, `de-DE`, etc. Locale will affect `navigator.language` value, `Accept-Language` request header value as well as number and date formatting rules.
- `no_viewport` <[bool]> Does not enforce fixed viewport, allows resizing window in the headed mode.
- `offline` <[bool]> Whether to emulate network being offline. Defaults to `false`.
- `permissions` <[List]\[[str]\]> A list of permissions to grant to all pages in this context. See [browser_context.grant_permissions(permissions, **kwargs)](./api/class-browsercontext.mdx#browser_contextgrant_permissionspermissions-kwargs) for more details.
- `proxy` <[Dict]> Network proxy settings to use with this context.
  - `server` <[str]> Proxy to be used for all requests. HTTP and SOCKS proxies are supported, for example `http://myproxy.com:3128` or `socks5://myproxy.com:3128`. Short form `myproxy.com:3128` is considered an HTTP proxy.
  - `bypass` <[str]> Optional coma-separated domains to bypass proxy, for example `".com, chromium.org, .domain.com"`.
  - `username` <[str]> Optional username to use if HTTP proxy requires authentication.
  - `password` <[str]> Optional password to use if HTTP proxy requires authentication.
- `record_har_omit_content` <[bool]> Optional setting to control whether to omit request content from the HAR. Defaults to `false`.
- `record_har_path` <[Union]\[[str], [pathlib.Path]\]> Enables [HAR](http://www.softwareishard.com/blog/har-12-spec) recording for all pages into the specified HAR file on the filesystem. If not specified, the HAR is not recorded. Make sure to call [browser_context.close()](./api/class-browsercontext.mdx#browser_contextclose) for the HAR to be saved.
- `record_video_dir` <[Union]\[[str], [pathlib.Path]\]> Enables video recording for all pages into the specified directory. If not specified videos are not recorded. Make sure to call [browser_context.close()](./api/class-browsercontext.mdx#browser_contextclose) for videos to be saved.
- `record_video_size` <[Dict]> Dimensions of the recorded videos. If not specified the size will be equal to `viewport` scaled down to fit into 800x800. If `viewport` is not configured explicitly the video size defaults to 800x450. Actual picture of each page will be scaled down if necessary to fit the specified size.
  - `width` <[int]> Video frame width.
  - `height` <[int]> Video frame height.
- `screen` <[Dict]> Emulates consistent window screen size available inside web page via `window.screen`. Is only used when the `viewport` is set.
  - `width` <[int]> page width in pixels.
  - `height` <[int]> page height in pixels.
- `storage_state` <[Union]\[[str], [pathlib.Path]\]|[Dict]> Populates context with given storage state. This option can be used to initialize context with logged-in information obtained via [browser_context.storage_state(**kwargs)](./api/class-browsercontext.mdx#browser_contextstorage_statekwargs). Either a path to the file with saved storage, or an object with the following fields:
  - `cookies` <[List]\[[Dict]\]> Optional cookies to set for context
    - `name` <[str]>
    - `value` <[str]>
    - `url` <[str]> Optional either url or domain / path are required
    - `domain` <[str]> Optional either url or domain / path are required
    - `path` <[str]> Optional either url or domain / path are required
    - `expires` <[float]> Optional Unix time in seconds.
    - `httpOnly` <[bool]> Optional httpOnly flag
    - `secure` <[bool]> Optional secure flag
    - `sameSite` <"Strict"|"Lax"|"None"> Optional sameSite flag
  - `origins` <[List]\[[Dict]\]> Optional localStorage to set for context
    - `origin` <[str]>
    - `localStorage` <[List]\[[Dict]\]>
      - `name` <[str]>
      - `value` <[str]>
- `timezone_id` <[str]> Changes the timezone of the context. See [ICU's metaZones.txt](https://cs.chromium.org/chromium/src/third_party/icu/source/data/misc/metaZones.txt?rcl=faee8bc70570192d82d2978a71e2a615788597d1) for a list of supported timezone IDs.
- `user_agent` <[str]> Specific user agent to use in this context.
- `viewport` <[NoneType]|[Dict]> Sets a consistent viewport for each page. Defaults to an 1280x720 viewport. `no_viewport` disables the fixed viewport.
  - `width` <[int]> page width in pixels.
  - `height` <[int]> page height in pixels.
- returns: <[Page]>

Creates a new page in a new browser context. Closing this page will close the context as well.

This is a convenience API that should only be used for the single-page scenarios and short snippets. Production code and testing frameworks should explicitly create [browser.new_context(**kwargs)](./api/class-browser.mdx#browsernew_contextkwargs) followed by the [browser_context.new_page()](./api/class-browsercontext.mdx#browser_contextnew_page) to control their exact life times.

## browser.start_tracing(**kwargs)
- `page` <[Page]> Optional, if specified, tracing includes screenshots of the given page.
- `categories` <[List]\[[str]\]> specify custom categories to use instead of default.
- `path` <[Union]\[[str], [pathlib.Path]\]> A path to write the trace file to.
- `screenshots` <[bool]> captures screenshots in the trace.
- returns: <[NoneType]>

:::note
Tracing is only supported on Chromium-based browsers.
:::

You can use [browser.start_tracing(**kwargs)](./api/class-browser.mdx#browserstart_tracingkwargs) and [browser.stop_tracing()](./api/class-browser.mdx#browserstop_tracing) to create a trace file that can be opened in Chrome DevTools performance panel.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
browser.start_tracing(page, path="trace.json")
page.goto("https://www.google.com")
browser.stop_tracing()
```

</TabItem>
<TabItem value="async">

```py
await browser.start_tracing(page, path="trace.json")
await page.goto("https://www.google.com")
await browser.stop_tracing()
```

</TabItem>
</Tabs>

## browser.stop_tracing()
- returns: <[bytes]>

:::note
Tracing is only supported on Chromium-based browsers.
:::

Returns the buffer with trace data.

## browser.version
- returns: <[str]>

Returns the browser version.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[Error]: ./api/class-error.mdx "Error"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Any]: https://docs.python.org/3/library/typing.html#typing.Any "Any"
[bool]: https://docs.python.org/3/library/stdtypes.html "bool"
[bytes]: https://docs.python.org/3/library/stdtypes.html#bytes "bytes"
[Callable]: https://docs.python.org/3/library/typing.html#typing.Callable "Callable"
[EventContextManager]: https://docs.python.org/3/reference/datamodel.html#context-managers "Event context manager"
[EventEmitter]: https://pyee.readthedocs.io/en/latest/#pyee.BaseEventEmitter "EventEmitter"
[Exception]: https://docs.python.org/3/library/exceptions.html#Exception "Exception"
[Dict]: https://docs.python.org/3/library/typing.html#typing.Dict "Dict"
[float]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "float"
[int]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "int"
[List]: https://docs.python.org/3/library/typing.html#typing.List "List"
[NoneType]: https://docs.python.org/3/library/constants.html#None "None"
[Pattern]: https://docs.python.org/3/library/re.html "Pattern"
[URL]: https://en.wikipedia.org/wiki/URL "URL"
[pathlib.Path]: https://realpython.com/python-pathlib/ "pathlib.Path"
[str]: https://docs.python.org/3/library/stdtypes.html#text-sequence-type-str "str"
[Union]: https://docs.python.org/3/library/typing.html#typing.Union "Union"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"